# pkg-christianwhocodes

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
christianwhocodes/: README.md  pyproject.toml
christianwhocodes/src/christianwhocodes/: __init__.py
christianwhocodes/src/christianwhocodes/commands/: __init__.py  platform.py
christianwhocodes/src/christianwhocodes/generators/: __init__.py
christianwhocodes/src/christianwhocodes/io/: __init__.py
christianwhocodes/src/christianwhocodes/utils/: __init__.py
learn-css/: README.md  pyproject.toml
learn-css/A-Transitions/: README (2).md  README.md
learn-css/A-Transitions/01-What-are-Transitions/: 01-What-are-Transitions.md
learn-css/A-Transitions/02-Adding-Transitions/: 02-Adding-Transitions.md  README.md  begin.css  begin.html  end.css
learn-css/A-Transitions/03-Customizing-Transitions/: 03-Customizing-Transitions.md  README.md  begin.css  begin.html  end.css  end.html
learn-css/A-Transitions/04-Transition-Shorthand/: 04-Transition-Shorthand.md  README.md  begin.html  end.css
learn-css/A-Transitions/05-Transition-Challenge/: 05-Transition-Challenge.md  README.md  begin.css  begin.html  end.css  end.html
learn-css/A-Transitions/06-Real-World-Transitions-Challenge-Menu/: 06-Real-World-Transitions-Challenge-Menu.md  README.md  begin.html  end.css  end.html
learn-css/B-Animations/: README (2).md  README.md
learn-css/B-Animations/07-Animations-In-Action/: 07-Animations-in-Action.md  end.css
learn-css/B-Animations/08-Defining-Animations/: 08-Defining-Animations.md  README.md  begin.css  end.css
learn-css/B-Animations/09-Animations-Timing/: 09-Animations-Timing.md  README.md  begin.css  end.css  end.html
learn-css/B-Animations/10-Animations-Other-Properties/: 10-Animations-Other-Properties.md  README.md  begin.css  begin.html  end.css  end.html
learn-css/B-Animations/11-Animation-Shorthand/: 11-Animation-Shorthand.md  README.md  begin.css  end.css
learn-css/B-Animations/12-Animation-Challenge/: 12-Animation-Challenge.md  README.md  begin.css  end.css
learn-css/B-Animations/13-Real-World-Animations-Challenge-Landing-Page/: README.md  begin.css  begin.html  end.css  end.html
learn-css/C-Transforms-and-Scaling/: README (2).md
learn-css/C-Transforms-and-Scaling/14-Introduction-to-Transforms-and-Scaling/: 14-Introduction-to-Transforms-and-Scaling.md  README.md  begin.css  end.css  end.html
learn-css/C-Transforms-and-Scaling/15-Translation/: 15-Translation.md  README.md  end.css
learn-css/C-Transforms-and-Scaling/16-Rotation/: 16-Rotation.md  README.md  begin.html  end.css  end.html
learn-css/C-Transforms-and-Scaling/17-Skew/: 17-Skew.md  README.md  index.css
learn-css/C-Transforms-and-Scaling/18-Transform-Challenge/: 18-Transform-Challenge.md  README.md  begin.css  begin.html  end.css  end.html
learn-css/C-Transforms-and-Scaling/19-Real-World-Transforms-Challenge-Logo/: 19-Real-World-Transforms-Challenge-Logo.md  README.md  begin.css  begin.html
learn-css/D-Good-to-Know/: README (2).md  README.md
learn-css/D-Good-to-Know/20-Prefixes/: 20-Prefixes.md  begin.html  end.css  end.html
learn-css/D-Good-to-Know/21-CSS-Variables/: 21-CSS-Variables.md  README.md  begin.css  end.css
learn-css/D-Good-to-Know/22-Custom-Timing-Functions/: 22-Custom-Timing-Functions.md  README.md  begin.css  end.css  end.html
learn-css/flexbox/md/: flexbox.md
learn-css/flexbox/notebooks/: flexbox.ipynb
learn-css/flexbox/src/: 00-initial.html  01-flex.html  03-flex-row.html  04-flex-col.html  05-justify-start.html  06-justify-end.html  07-justify-center.html  basic.css
learn-django/: README.md  pyproject.toml
learn-git/: pyproject.toml
learn-programming/: README.md  pyproject.toml
learn-programming/md/: 07-Object-Oriented-Programming.md  09-Working-with-Files.md  10-Working-with-Paths.md  11-Threads-and-Processes.md  12-Working-with-Programs.md
learn-programming/notebooks/: 00-Introduction.ipynb  07-Object-Oriented-Programming.ipynb  reference_guide.ipynb
learn-python/: pyproject.toml
learn-python/md/: 13-Command-line-Arguments.md
learn-tool/: README.md  git.ipynb  git.md  pyproject.toml  termux-nethunter-setup.md
src/christianwhocodes/: __init__.py  cli.py
src/christianwhocodes/commands/: __init__.py  base.py  copy.py  random.py
src/christianwhocodes/generators/: __init__.py  file.py  random.py
src/christianwhocodes/io/: __init__.py  console.py  filesystem.py
src/christianwhocodes/utils/: __init__.py  config.py  converters.py  enums.py  math.py  platform.py  strings.py  version.py
