[project.urls]
Homepage = "https://github.com/treeolive-tech/learn/tree/main/learn-css#readme"
Repository = "https://github.com/treeolive-tech/learn/tree/main/learn-css.git"
Issues = "https://github.com/treeolive-tech/learn/issues"

[project]
name = "learn-css"
version = "1.0.0"
description = "Learn CSS"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.12"
dependencies = ["jupyter==1.1.1"]

# Pre-commit configuration
[tool.ruff]
