[project.urls]
Homepage = "https://github.com/treeolive-tech/learn/tree/main/learn-programming#readme"
Repository = "https://github.com/treeolive-tech/learn/tree/main/learn-programming.git"
Issues = "https://github.com/treeolive-tech/learn/issues"

[project]
name = "learn-programming"
version = "1.0.0"
description = "Learn Programming"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.13"
dependencies = ["jupyter==1.1.1"]

# Pre-commit configuration
[tool.ruff]
