[project.urls]
Homepage = "https://github.com/treeolive-tech/learn/tree/main/learn-tool#readme"
Repository = "https://github.com/treeolive-tech/learn/tree/main/learn-tool.git"
Issues = "https://github.com/treeolive-tech/learn/issues"

[project]
name = "learn-tool"
version = "1.0.0"
description = "Learn Tools such as Git and more."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.13"
dependencies = ["jupyter==1.1.1"]

# Pre-commit configuration
